skills ul spacing fixed

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -288,7 +288,7 @@ svg {
 
 .skills ul {
   min-height: 300px;
-  padding: 30px 0px 30px calc(2* var(--padd-main-h));
+  padding: 0px 0px 30px calc(2* var(--padd-main-h));
   list-style-type: none;
   text-transform: uppercase;
   font-size: 2rem;
